# tsatti

./: Tsatti.hs  TsattiWarp.hs  tsatti.cabal
static/: index.html  style.css  tsatti.js
