name:                tsatti
version:             0.1.0.0
synopsis:            Not so simple websockets chat
description:         Resambles the real webapp
homepage:            https://github.com/phadej/tsatti
license:             MIT
license-file:        LICENSE
author:              Oleg Grenrus
maintainer:          oleg.grenrus@iki.fi
copyright:           Copyright (c) 2041 Oleg Grenrus
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable tsatti-warp
  main-is:             TsattiWarp.hs
  other-modules:       Tsatti
  other-extensions:    OverloadedStrings, TemplateHaskell
  build-depends:       base >=4.6 && <4.8, wai >=2.1 && <2.2, wai-app-static >=2.0 && <2.1, wai-websockets >=2.1 && <2.2, websockets >=0.8 && <0.9, time >=1.4 && <1.5, stm >=2.4 && <2.5, text >=1.1 && <1.2, aeson >=0.7 && <0.8, file-embed >=0.0 && <0.1, warp >=2.1 && <2.2
  default-language:    Haskell2010
